# BenchRep

./: .gitignore  README.md  environment.yml  pyproject.toml
examples/configs/: evaluation.yaml  mnist_autoencoder.yaml  mnist_vae.yaml  prediction_external.yaml  prediction_mnist.yaml  training_mnist_autoencoder.yaml  training_mnist_external.yaml  training_mnist_vae.yaml  training_mnist_vae_conv2d.yaml  training_mnist_vae_resnet.yaml
src/benchrep/: __init__.py
src/benchrep/architecture/: utils.py
src/benchrep/assembly/: __init__.py  config.py  config_utils.py  register_builtins.py  registry.py  registry_utils.py
src/benchrep/evaluation/: __init__.py  clustering.py  clustering_metrics.py  io.py  packaging.py  pipelines.py  plotting.py  reconstruction.py  reductions.py  utils.py
src/benchrep/interfaces/: compatibility.py  contracts.py  model_families.py  models.py  validation.py
src/benchrep/records/: __init__.py  anndata_io.py  architecture.py  audit_reports.py  configs.py  evaluation_exports.py  logs.py  manifest.py  manifests.py  prediction_exports.py  utils.py
src/benchrep/runtime/: __init__.py  evaluate_run_validation.py  predict_run_validation.py  run_context.py  train_run_validation.py  utils.py
src/benchrep/workflows/: __init__.py  evaluate.py  evaluation.py  predict.py  prediction.py  train.py  train_mnist_autoencoder_smoke.py  training.py
tests/fixtures/: datamodules.py  datasets.py  models.py
tests/fixtures/configs/: configs.py  (+3 more)
tests/integration/: test_config_composition.py  test_end_to_end.py  test_runtime_overrides.py
(+54 files in other folders)
