[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "benchrep"
version = "0.0.1"
description = "Benchmarking representation learning models and learned embeddings."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3,<3",
    "torchvision>=0.18,<1",
    "lightning>=2.3,<3",
    "numpy>=1.26,<3",
    "pandas>=2.0,<3",
    "scikit-learn>=1.3,<2",
]

[tool.setuptools.packages.find]
where = ["src"]