[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "benchrep"
version = "0.0.1"
description = "Benchmarking representation learning models and learned embeddings."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3,<3",
    "torchvision>=0.18,<1",
    "lightning>=2.3,<3",
    "pyyaml>=6,<7",
    "pydantic>=2,<3",
    "numpy>=1.26,<3",
    "pandas>=2.0,<3",
    "scikit-learn>=1.3,<2",
    "anndata>=0.10,<0.13",
    "matplotlib>=3.8,<4",
    "tifffile>=2024.0",
]

[project.optional-dependencies]
scverse = [
    "scanpy>=1.10,<2",
    "leidenalg>=0.10,<1",
    "igraph>=0.11,<1",
]
logging = [
    "wandb>=0.17,<1",
]
model_graph = [
    "torchview",
    "graphviz",
]

[tool.setuptools.packages.find]
where = ["src"]